--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyNLOSOgwRVwKgMGix0dJxoh",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,8 +17,18 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/anushrijamar/Machine_learning/blob/main/lab1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "TxL77f5JYmTU"
       },
@@ -110,7 +122,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QV4QHEpdZ9qC",
-        "outputId": "d9d58e2f-e9be-490f-dfcd-c4842853306f"
+        "outputId": "f293289b-7a37-4797-9f4e-1dfd2c786ced"
       },
       "execution_count": null,
       "outputs": [
@@ -132,23 +144,18 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 170
+          "base_uri": "https://localhost:8080/"
         },
         "id": "ENA_ZqxCa7yT",
-        "outputId": "32c8c7a6-533d-490d-919e-d762671e1fb5"
+        "outputId": "cd55c53e-d198-4d5f-f553-5ea80734189d"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-1-e044d61abdc6>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'x' is not defined"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n"
           ]
         }
       ]
